# minivae

./: .gitignore  README.md  config.yaml  dataset.py  decoder.py  gmvae.py  loss.py  pyproject.toml  requirements.txt  setup_env.sh  train.py  vae.py
configs/: train_gmvae.yaml  train_vae.yaml
minivae/models/: decoder.py  distributions.py  gmvae.py  vae.py
minivae/utils/: dataset.py  loss.py
